# elk-util

./: .gitignore  README.md  app.py  pyproject.toml  rxconfig.py
elk_util/: elk-cursor.py  streamlit_app.py
elk_util.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
es_sync_ui.egg-info/: SOURCES.txt  requires.txt
